AutoSuggest: adding useCache

--- a/manualtests/widgets/autosuggest/index.html
+++ b/manualtests/widgets/autosuggest/index.html
@@ -97,7 +97,8 @@
 				complete: true,
 				activeOnShow: false,
 				delim: " ",
-				theme: urlOpts.theme
+				theme: urlOpts.theme,
+				useCache: true
 			}
 		).loadData();
 		
