AutoSuggest: changed keyboard behavior for left / right keys

--- a/manualtests/widgets/autosuggest/index.html
+++ b/manualtests/widgets/autosuggest/index.html
@@ -72,6 +72,7 @@
 		<li>Holding up or down arrow keys will loop through values</li>
 		<li>Pressing enter on an item / clicking on an item will leave that value in the input</li>
 		<li>If the browser has a zoom feature, zoom the view before the AutoSuggest appears, ensure it's in the correct position</li>
+		<li>Pressing the left / right arrow keys should not hide any currently shown results</li>
 	</ul>
 	
 	<div class="sandbox">
