Slider: Refactoring keyboard events, allowing up/right and down/left at the same time

--- a/manualtests/widgets/slider/index.html
+++ b/manualtests/widgets/slider/index.html
@@ -59,7 +59,7 @@
 		<li>The handle of the slider cannot be dragged off its track</li>
 		<li>The back &amp; forward buttons can be used to move the slider</li>
 		<li>The slider can receive tab focus (and visually shows this)</li>
-		<li>While having focus, the arrow keys can be used to control the slider</li>
+		<li>While having focus, the arrow keys can be used to control the slider. Left/right arrow keys should work regardless of slider orientation</li>
 		<li>Clicking anywhere on the slider track moves the handle to that position</li>
 		<li>Clicking anywhere on the slider track &amp; dragging drags the slider handle</li>
 		<li>'change' should only fire when sliding stops</li>
@@ -150,7 +150,6 @@
 		<li>The slider should have a large tick mark on every integer</li>
 		<li>The slider should have a small tick mark on every .5</li>
 		<li>The slider should have a correct numerical label every (even) 2</li>
-		<li>Clicking on a label will move the slider to that value</li>
 		<li>The handle should drag smoothly, but snap to the nearest tick mark once released</li>
 	</ul>
 	
