Autosuggest: Correction to manual test wordings

--- a/manualtests/widgets/autosuggest/index.html
+++ b/manualtests/widgets/autosuggest/index.html
@@ -212,7 +212,7 @@
 
 	<h2>Autosuggest with caseSensitive, maxListLength, onItemSelect, and completion</h2>
 	<ul>
-		<li>Ensure the search is case sensitive</li>
+		<li>Ensure the search is case sensitive (i.e start with a capitalised first character like 'Magenta')</li>
 		<li>Once selected, a hex value should appear in the input</li>
 	</ul>
 	
@@ -282,7 +282,7 @@
 	</script>
 
 	<h2>Position Suggestion Manually</h2>
-	<p>The list of suggestions should appear <em>above</em> the input element.</p>
+	<p>The list of suggestions should appear to the <em>right</em> of the input element.</p>
 	
 	<div class="sandbox">
 		<form action="#" id="testForm6">
