Added option to Autosuggest to turn off selection of the completed text in the input element. [ticket #143]

--- a/manualtests/widgets/autosuggest/index.html
+++ b/manualtests/widgets/autosuggest/index.html
@@ -96,6 +96,7 @@
 					}
 				},
 				complete: true,
+				selectCompletedText: false,
 				activeOnShow: false,
 				delim: " ",
 				theme: urlOpts.theme,
