--- a/test/index.html
+++ b/test/index.html
@@ -176,28 +176,8 @@
 		<input type="text" id="length" name="test"/>
 		<input type="text" id="idTest" name="id"/>
 	</form>
-	<table id="table"></table>
-	
-	<div id="fx-queue">
-		<div id="fadein" class='chain test'>fadeIn<div>fadeIn</div></div>
-		<div id="fadeout" class='chain test out'>fadeOut<div>fadeOut</div></div>
-		
-		<div id="show" class='chain test'>show<div>show</div></div>
-		<div id="hide" class='chain test out'>hide<div>hide</div></div>
-		
-		<div id="togglein" class='chain test'>togglein<div>togglein</div></div>
-		<div id="toggleout" class='chain test out'>toggleout<div>toggleout</div></div>
-	
-		
-		<div id="slideup" class='chain test'>slideUp<div>slideUp</div></div>
-		<div id="slidedown" class='chain test out'>slideDown<div>slideDown</div></div>
-		
-		<div id="slidetogglein" class='chain test'>slideToggleIn<div>slideToggleIn</div></div>
-		<div id="slidetoggleout" class='chain test out'>slideToggleOut<div>slideToggleOut</div></div>
-	</div>
-	
+	<table id="table"></table>	
 	<div id="fx-tests"></div>
-
 	<form id="testForm" action="#" method="get">
 		<textarea name="T3" rows="2" cols="15">?
 Z</textarea>
@@ -242,6 +222,13 @@ Z</textarea>
 	</form>
 </div>
 </dl>
+<div id="animTests" style="display:none">
+	<div id="fadein">fadeIn<div>fadeIn</div></div>
+	<div id="fadeout">fadeOut<div>fadeOut</div></div>
+	
+	<div id="slideup">slideUp<div>slideUp</div></div>
+	<div id="slidedown">slideDown<div>slideDown</div></div>
+</div>
 
 <div id="ua">User agent string goes here</div>
 <div class="body" id="mainOutput">
