Added case where bare text is in the caraousel item. [ticket #146]

--- a/manualtests/widgets/carousel/index.html
+++ b/manualtests/widgets/carousel/index.html
@@ -89,7 +89,7 @@
 	
 	<div class="sandbox">
 		<ol id="carousel1">
-			<li><a href="#"><img src="images/1-item.jpg" alt="" width="120" height="90" /></a></li>
+			<li><a href="#"><img src="images/1-item.jpg" alt="" width="120" height="90" /></a>Some Bare Text</li>
 			<li><a href="#"><img src="images/2-item.jpg" alt="" width="120" height="90" /></a></li>
 			<li><a href="#"><img src="images/3-item.jpg" alt="" width="120" height="90" /></a></li>
 			<li><a href="#"><img src="images/4-item.jpg" alt="" width="120" height="90" /></a></li>
@@ -108,7 +108,7 @@
 			{
 				size: 5,
 				step: 2,
-				loop: true,
+				loop: false,
 				vertical: urlOpts.vertical,
 				theme: urlOpts.theme
 			}
