anim: Fix for slideDown if elements have height defined as 0 in CSS

--- a/test/index.html
+++ b/test/index.html
@@ -228,6 +228,7 @@ Z</textarea>
 	
 	<div id="slideup">slideUp<div>slideUp</div></div>
 	<div id="slidedown">slideDown<div>slideDown</div></div>
+	<div id="slidedown2"><div style="height:100px"></div></div>
 </div>
 
 <div id="ua">User agent string goes here</div>
